--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "expo": "~53.0.11",
     "expo-application": "^6.1.4",
+    "expo-av": "^15.1.6",
     "expo-blur": "~14.1.5",
     "expo-camera": "^16.1.8",
     "expo-constants": "~17.1.6",
