--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "backend",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
