--- a/people-search/pyproject.toml
+++ b/people-search/pyproject.toml
@@ -1,13 +1,15 @@
 [project]
-name = "ai-friend"
+name = "people-search"
 version = "0.1.0"
-description = "Add your description here"
+description = "Search for people in the database"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "enrichmcp>=0.4.0",
     "fastapi>=0.115.12",
     "gunicorn>=23.0.0",
+    "langchain-openai>=0.3.23",
+    "markdownify>=1.1.0",
     "openai>=1.86.0",
     "python-dotenv>=1.1.0",
     "supabase>=2.15.3",
