--- a/people-search/requirements.txt
+++ b/people-search/requirements.txt
@@ -20,7 +20,7 @@ deprecation==2.1.0
 distro==1.9.0
 enrichmcp==0.4.0
 faiss-cpu==1.11.0
-fastapi==0.115.12
+fastapi>=0.68.0
 filetype==1.2.0
 frozenlist==1.7.0
 google-ai-generativelanguage==0.6.18
@@ -55,18 +55,18 @@ langchain-ollama==0.3.3
 langchain-openai==0.3.23
 langchain-text-splitters==0.3.8
 langsmith==0.3.45
-markdownify==1.1.0
+markdownify>=0.11.6
 mcp==1.9.4
 mcp-python==0.1.4
 mem0ai==0.1.108
 multidict==6.4.4
 numpy==2.3.0
 ollama==0.5.1
-openai==1.86.0
+openai>=1.0.0
 orjson==3.10.18
 packaging==24.2
 patchright==1.52.5
-playwright==1.52.0
+playwright>=1.40.0
 pluggy==1.6.0
 portalocker==2.10.1
 postgrest==1.0.2
@@ -77,7 +77,7 @@ protobuf==6.31.1
 psutil==7.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
-pydantic==2.11.7
+pydantic>=2.0.0
 pydantic-core==2.33.2
 pydantic-settings==2.9.1
 pyee==13.0.0
@@ -89,8 +89,8 @@ pyperclip==1.9.0
 pytest==8.4.0
 pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-multipart==0.0.20
+python-dotenv>=0.19.0
+python-multipart>=0.0.5
 pytz==2025.2
 pyyaml==6.0.2
 qdrant-client==1.14.2
@@ -109,7 +109,7 @@ sse-starlette==2.3.6
 starlette==0.46.2
 storage3==0.11.3
 strenum==0.4.15
-supabase==2.15.3
+supabase>=0.0.2
 supafunc==0.9.4
 tenacity==9.1.2
 tiktoken==0.9.0
@@ -118,7 +118,7 @@ typing-extensions==4.14.0
 typing-inspection==0.4.1
 urllib3==2.4.0
 uuid7==0.1.0
-uvicorn==0.34.3
+uvicorn>=0.15.0
 websockets==14.2
 yarl==1.20.1
 zstandard==0.23.0
