--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.10",
-    "supabase": "^2.24.3"
+    "pdf-parse": "^1.1.1",
+    "supabase": "^2.24.3",
+    "mammoth": "^1.4.31",
+    "openai": "^4.29.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
